Trick our way into XToolkit